# FlatFounder

./: .gitignore  CMakeLists.txt  main.cpp
Fabrics/: FlatFounderFabric.cpp  FlatFounderFabric.h
Settings/: FlatFilters.json  SoftSettings.json
Structs/: FlatFilters.h  Results.h  SettingsStruct.h
TGBot/: DBHandler.py  Settings.json  TcpTgBot.py  main.py
classes/: FlatFounder.cpp  FlatFounder.h
classes/Converters/: FlatFiltersConverter.cpp  FlatFiltersConverter.h  IConverter.h  ResultConverter.cpp  ResultConverter.h  SettingsStructConverter.cpp  SettingsStructConverter.h
classes/Loggers/: MainLogger.cpp  MainLogger.h
classes/Presentaters/: CMDPresentater.cpp  CMDPresentater.h  IPresentator.h  TGPresentators.cpp  TGPresentators.h
classes/Readers/: FileReader.cpp  FileReader.h  IReader.h
classes/Sites/: ISites.h  KufarSite.cpp  KufarSite.h
classes/Sites/HttpsClients/: DefaultHttpsClient.cpp  DefaultHttpsClient.h  IHttpsClient.h
classes/Sites/RequestGeneraters/: IRequestGenerator.h  KufarRequestGenerator.cpp  KufarRequestGenerator.h
classes/Sites/RequestReceivers/: DefaultRequestReceiver.cpp  DefaultRequestReceiver.h  IRequestReceiver.h
classes/Sites/RequestSenders/: DefaultRequestSender.cpp  DefaultRequestSender.h  IRequestSender.h
